// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Button /> > renders as expected based on provided props 1`] = `
<div>
  <div
    class="bg-white"
  >
    <button
      class="flex gap-2 items-center justify-center border rounded-md no-underline transition-colors focus-ring px-3 py-1.5 border-lm-brand dark:border-dm-brand text-lm-brand dark:text-dm-brand highlight:text-white highlight:bg-lm-brand dark:highlight:bg-dm-brand cursor-pointer"
      type="button"
    />
  </div>
</div>
`;

exports[`<Button /> > renders as expected based on provided props 2`] = `
<div>
  <div
    class="bg-white"
  >
    <button
      class="flex gap-2 items-center justify-center border rounded-md no-underline transition-colors focus-ring px-3 py-1.5 border-lm-brand dark:border-dm-brand text-white bg-lm-brand dark:bg-dm-brand highlight:bg-lm-brand-dark dark:highlight:bg-dm-brand-dark highlight:border-lm-brand-dark dark:highlight:border-dm-brand-dark highlight:bg-lm-brand dark:highlight:bg-dm-brand cursor-pointer"
      type="button"
    />
  </div>
</div>
`;

exports[`<Button /> > renders as expected based on provided props 3`] = `
<div>
  <div
    class="bg-white"
  >
    <button
      class="inline-flex gap-2 items-center justify-center border rounded-md no-underline transition-colors focus-ring px-3 py-1.5 border-lm-brand dark:border-dm-brand text-lm-brand dark:text-dm-brand highlight:text-white highlight:bg-lm-brand dark:highlight:bg-dm-brand cursor-pointer"
      type="button"
    />
  </div>
</div>
`;

exports[`<Button /> > renders as expected based on provided props 4`] = `
<div>
  <div
    class="bg-white"
  >
    <button
      class="flex gap-2 items-center justify-center border rounded-md no-underline transition-colors focus-ring px-3 py-1.5 border-lm-brand dark:border-dm-brand text-lm-brand dark:text-dm-brand pointer-events-none opacity-65"
      disabled=""
      type="button"
    />
  </div>
</div>
`;

exports[`<Button /> > renders as expected based on provided props 5`] = `
<div>
  <div
    class="bg-white"
  >
    <button
      class="flex gap-2 items-center justify-center border rounded-md no-underline transition-colors focus-ring px-1.5 py-1 text-sm border-lm-brand dark:border-dm-brand text-lm-brand dark:text-dm-brand highlight:text-white highlight:bg-lm-brand dark:highlight:bg-dm-brand cursor-pointer"
      type="button"
    />
  </div>
</div>
`;

exports[`<Button /> > renders as expected based on provided props 6`] = `
<div>
  <div
    class="bg-white"
  >
    <button
      class="flex gap-2 items-center justify-center border rounded-md no-underline transition-colors focus-ring px-3 py-1.5 border-lm-brand dark:border-dm-brand text-lm-brand dark:text-dm-brand highlight:text-white highlight:bg-lm-brand dark:highlight:bg-dm-brand cursor-pointer"
      type="button"
    />
  </div>
</div>
`;

exports[`<Button /> > renders as expected based on provided props 7`] = `
<div>
  <div
    class="bg-white"
  >
    <button
      class="flex gap-2 items-center justify-center border rounded-md no-underline transition-colors focus-ring px-4 py-2 text-lg border-lm-brand dark:border-dm-brand text-lm-brand dark:text-dm-brand highlight:text-white highlight:bg-lm-brand dark:highlight:bg-dm-brand cursor-pointer"
      type="button"
    />
  </div>
</div>
`;

exports[`<Button /> > renders as expected based on provided props 8`] = `
<div>
  <div
    class="bg-white"
  >
    <button
      class="flex gap-2 items-center justify-center border rounded-md no-underline transition-colors focus-ring px-3 py-1.5 border-lm-brand dark:border-dm-brand text-lm-brand dark:text-dm-brand highlight:text-white highlight:bg-lm-brand dark:highlight:bg-dm-brand cursor-pointer"
      type="button"
    />
  </div>
</div>
`;

exports[`<Button /> > renders as expected based on provided props 9`] = `
<div>
  <div
    class="bg-white"
  >
    <button
      class="flex gap-2 items-center justify-center border rounded-md no-underline transition-colors focus-ring-secondary px-3 py-1.5 border-zinc-500 text-zinc-500 highlight:text-white highlight:bg-zinc-500 cursor-pointer"
      type="button"
    />
  </div>
</div>
`;

exports[`<Button /> > renders as expected based on provided props 10`] = `
<div>
  <div
    class="bg-white"
  >
    <button
      class="flex gap-2 items-center justify-center border rounded-md no-underline transition-colors focus-ring-danger px-3 py-1.5 border-danger text-danger highlight:text-white highlight:bg-danger cursor-pointer"
      type="button"
    />
  </div>
</div>
`;

exports[`<Button /> > renders as expected based on provided props 11`] = `
<div>
  <div
    class="bg-white"
  >
    <button
      class="flex gap-2 items-center justify-center border rounded-md no-underline transition-colors focus-ring px-3 py-1.5 border-lm-brand dark:border-dm-brand text-white bg-lm-brand dark:bg-dm-brand highlight:bg-lm-brand-dark dark:highlight:bg-dm-brand-dark highlight:border-lm-brand-dark dark:highlight:border-dm-brand-dark highlight:bg-lm-brand dark:highlight:bg-dm-brand cursor-pointer"
      type="button"
    />
  </div>
</div>
`;

exports[`<Button /> > renders as expected based on provided props 12`] = `
<div>
  <div
    class="bg-white"
  >
    <button
      class="flex gap-2 items-center justify-center border rounded-md no-underline transition-colors focus-ring-secondary px-3 py-1.5 border-zinc-500 text-white bg-zinc-500 highlight:bg-zinc-600 highlight:border-zinc-600 highlight:bg-zinc-500 cursor-pointer"
      type="button"
    />
  </div>
</div>
`;

exports[`<Button /> > renders as expected based on provided props 13`] = `
<div>
  <div
    class="bg-white"
  >
    <button
      class="flex gap-2 items-center justify-center border rounded-md no-underline transition-colors focus-ring-danger px-3 py-1.5 border-danger text-white bg-danger highlight:bg-danger-dark highlight:border-danger-dark highlight:bg-danger cursor-pointer"
      type="button"
    />
  </div>
</div>
`;

exports[`<Button /> > renders as expected based on provided props 14`] = `
<div>
  <div
    class="bg-white"
  >
    <a
      class="flex gap-2 items-center justify-center border rounded-md no-underline transition-colors focus-ring px-3 py-1.5 border-lm-brand dark:border-dm-brand text-lm-brand dark:text-dm-brand highlight:text-white highlight:bg-lm-brand dark:highlight:bg-dm-brand cursor-pointer"
      data-discover="true"
      href="/foo/bar"
    />
  </div>
</div>
`;
